# sktime_forecast_pipeline

./: README.md  gpt_darts_pipeline.py  gpt_sktime_pipeline.py  model_comparison_with_tcn_plot.xlsx  pyproject.toml  quickstart_darts_DL.py  quickstart_darts_Reg.py  quickstart_darts_Stats.py  sonnet_sktime_pipeline.py  test.py  teste.py  teste2.py
darts_python/: LightGBMModel.py  NBEATSModel.py  TCNModel.py  TFTModel.py  config.py  main.py  model_selection.py  utils.py  visualization.py
data/: groupby_train.csv  groupby_transactions.csv
evaluation/gpt_darts_pipeline_20250423_233517/: evaluation.csv
evaluation/gpt_darts_pipeline_20250423_234528/: evaluation.csv
evaluation/gpt_darts_pipeline_20250424_171737/: evaluation.csv
forecast/gpt_darts_pipeline_20250423_233424/: forecast_ARIMA.csv  forecast_LightGBM.csv  forecast_Naive Level.csv  forecast_Naive Seas007.csv  forecast_Naive Seas364.csv
forecast/gpt_darts_pipeline_20250423_233517/: forecast_ETS.csv  forecast_Theta.csv
forecast/gpt_darts_pipeline_20250423_234528/: forecast_CatBoost.csv  forecast_NBEATS.csv  forecast_Naive Seas028.csv  forecast_Naive Trend.csv  forecast_OLS.csv  forecast_Prophet.csv  forecast_TCN.csv  forecast_TFT.csv
forecast/gpt_darts_pipeline_20250424_171737/: forecast_Prophet.csv
lightning_logs/version_0/: events.out.tfevents.1745672289.poaa  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1745672319.poaa
lightning_logs/version_10/: events.out.tfevents.1745672716.poaa  hparams.yaml
models/: LinearRegression_model.joblib  NaiveSeasonal_model.joblib  Theta_model.joblib
(+801 files in other folders)
