[project]
name = "sktime-forecast-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "poaa"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (<2)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "sktime (>=0.37.0,<0.38.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "statsforecast (>=1.3.0)",
    "darts (>=0.35.0,<0.36.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "u8darts[all] (>=0.35.0,<0.36.0)",
    "neuralforecast (>=1.6.4)",
    "tbats (>=1.1.3,<2.0.0)",
    "holidays (>=0.71,<0.72)",
    "pytorch-forecasting (>=1)",
    "transformers (>=4.51.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
